--- a/content/cloud-docs/workspaces/variables/index.mdx
+++ b/content/cloud-docs/workspaces/variables/index.mdx
@@ -103,6 +103,8 @@ For example, if you apply `A_Variable_Set` and `B_Variable_Set` to the same work
 
 Non-global variable sets always take precedence over global variable sets that are applied to all workspaces within an organization. Terraform does not allow global variable sets to contain variables with the same key, so they cannot conflict.
 
+When global variable sets have conflicting variables, Terraform Cloud compares the variable set names, and uses values from the variable set with lexical predence. Lexical precedence follows the same rules as for non-global variable sets.
+
 ### 6. `auto.tfvars` Variable Files
 
 Variables in the Terraform Cloud workspace and variables provided through the command line always overwrite variables with the same key from files ending in `auto.tfvars`.
