--- a/content/enterprise/system-overview/capacity.mdx
+++ b/content/enterprise/system-overview/capacity.mdx
@@ -62,7 +62,7 @@ The amount of disk storage available to a system plays a small role in the capac
 A root volume with 200 GB of storage can sustain a capacity well over 100 concurrent runs.
 
 
-It is recommended to use a disk with a minimum of 500 IOPs or 100+MB/s throughput, whichever is the smaller and these are provisioned values.
+It is recommended to use a disk with a minimum of 500 IOPS or 100+MB/s throughput, whichever is the smaller and these are provisioned values.
 
 ## Disk I/O
 
