updated guidance for TFE disk requirements (#2170)
* adding guidance for minimum disc spec

* Update capacity.mdx

* Update capacity.mdx

* Update capacity.mdx

* Update content/enterprise/system-overview/capacity.mdx

Co-authored-by: Matthew Sanabria <24284972+sudomateo@users.noreply.github.com>

Co-authored-by: Matthew Sanabria <24284972+sudomateo@users.noreply.github.com>

--- a/content/enterprise/system-overview/capacity.mdx
+++ b/content/enterprise/system-overview/capacity.mdx
@@ -72,3 +72,6 @@ This resource is harder to predict than memory or CPU usage because it varies pe
 but in general we suggest 35 IOPS per concurrent Terraform run. So if an instance is configured for
 20 concurrent runs, the disk should have 700 IOPS allocated. For reference, on AWS, an EBS volume
 with an allocated size of 250 GB comes with a steady state of 750 IOPS.
+
+It is recommended to use a disk with a minimum of 500 IOPS or 100+MB/s throughput, whichever is the smaller and these are provisioned values.
+
