Add missing include relations in docs

--- a/content/cloud-docs/api-docs/organizations.mdx
+++ b/content/cloud-docs/api-docs/organizations.mdx
@@ -800,12 +800,22 @@ curl \
 }
 ```
 
+## Available Related Resources
+
+The GET endpoints above can optionally return related resources, if requested with [the `include` query parameter](/cloud-docs/api-docs/#inclusion-of-related-resources). The following resource types are available:
+
+| Resource Name         | Description                                                                                  |
+| --------------------- | -------------------------------------------------------------------------------------------- |
+| `entitlement_set`     | The entitlement set that determines which Terraform Cloud features the organization can use. |
+
 ## Relationships
 
-The following relationships may be present in various responses:
+The following relationships may be present in various responses.
 
-* `module-producers`: Other organizations that are configured to share modules with the organization. Terraform Enterprise v202103-1 or later only.
-* `oauth-tokens`: OAuth tokens associated with VCS configurations for the organization.
-* `authentication-token`: The API token for an organization.
-* `entitlement-set`: The entitlement set that determines which Terraform Cloud features the organization can use.
-* `subscription`: The current subscription for an organization.
+| Resource Name         | Description                                                                                                                   |
+| --------------------- | ----------------------------------------------------------------------------------------------------------------------------- |
+| `module-producers`    | Other organizations that are configured to share modules with the organization. Terraform Enterprise v202103-1 or later only. |
+| `oauth-tokens`        | OAuth tokens associated with VCS configurations for the organization.                                                         |
+| `authentication-token`| The API token for an organization.                                                                                            |
+| `entitlement-set`     | The entitlement set that determines which Terraform Cloud features the organization can use.                                  |
+| `subscription`        | The current subscription for an organization.                                                                                 |
