--- a/content/cloud-docs/api-docs/policies.mdx
+++ b/content/cloud-docs/api-docs/policies.mdx
@@ -438,4 +438,6 @@ curl \
 
 The GET endpoints above can optionally return related resources, if requested with [the `include` query parameter](/cloud-docs/api-docs/#inclusion-of-related-resources). The following resource types are available:
 
-* `policy-sets` - Policy sets that any returned policies are members of.
+| Resource Name | Description                                            |
+| ------------- | ------------------------------------------------------ |
+| `policy_sets` | Policy sets that any returned policies are members of. |
