--- a/content/cloud-docs/registry/publish-modules.mdx
+++ b/content/cloud-docs/registry/publish-modules.mdx
@@ -87,6 +87,8 @@ Refer to [Preparing a Module Repository](#preparing-a-module-repository) for det
 
 You can delete individual versions of a module or the entire module. If deleting a module version would leave a module with no versions, Terraform Cloud will remove the entire module. To delete a module or version:
 
+-> **Note:** Deleting a tag from your VCS repository will not automatically remove the version from the private registry.
+
 1. Navigate to the module's details page.
 
 1. If you want to delete a single version, use the **Versions** menu to select it.
