make permissions stand out

--- a/content/cloud-docs/workspaces/variables/managing-variables.mdx
+++ b/content/cloud-docs/workspaces/variables/managing-variables.mdx
@@ -11,10 +11,12 @@ You can set variables specifically for each workspace or you can create variable
 
 ~> **Note:** Variable sets are in beta.
 
+### Permissions
 You must have [`read variables` permission](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) to view the variables for a particular workspace and to view the variable sets in your organization.
 
 To create new variable sets and apply them to workspaces, you must be part of a team with [manage workspaces](/cloud-docs/users-teams-organizations/permissions#organization-owners) permissions. To create and edit workspace-specific variables within a workspace, you must have [read and write variables](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) for that workspace.
 
+### Creating Variables
 Once you have the proper [read and write variables permissions](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions), you can create and edit workspace-specific variables through:
 
 - The Terraform Cloud UI, as detailed below.
