--- a/content/cloud-docs/workspaces/variables/managing-variables.mdx
+++ b/content/cloud-docs/workspaces/variables/managing-variables.mdx
@@ -16,7 +16,7 @@ You must have [`read variables` permission](/cloud-docs/users-teams-organization
 
 To create new variable sets and apply them to workspaces, you must be part of a team with [manage workspaces](/cloud-docs/users-teams-organizations/permissions#organization-owners) permissions. To create and edit workspace-specific variables within a workspace, you must have [read and write variables](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) for that workspace.
 
-### Creating Variables
+### Create and Edit Variables
 Once you have the proper [read and write variables permissions](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions), you can create and edit workspace-specific variables through:
 
 - The Terraform Cloud UI, as detailed below.
