Fix instance_count property casing from snake_case to kebab-case

--- a/content/cloud-docs/api-docs/organization-tags.mdx
+++ b/content/cloud-docs/api-docs/organization-tags.mdx
@@ -77,7 +77,7 @@ $ curl \
       "attributes": {
         "name": "tag1",
         "created-at":  "2022-03-09T06:04:39.585Z",
-        "instance_count": 1
+        "instance-count": 1
       },
       "relationships": {
         "organization": {
@@ -94,7 +94,7 @@ $ curl \
       "attributes": {
         "name": "tag2",
         "created-at":  "2022-03-09T06:04:39.585Z",
-        "instance_count": 2
+        "instance-count": 2
       },
       "relationships": {
         "organization": {
