--- a/content/cloud-docs/api-docs/workspaces.mdx
+++ b/content/cloud-docs/api-docs/workspaces.mdx
@@ -2314,7 +2314,7 @@ $ curl \
       "attributes": {
         "name": "tag1",
         "created-at":  "2022-03-09T06:04:39.585Z",
-        "instance_count": 1
+        "instance-count": 1
       },
       "relationships": {
         "organization": {
@@ -2331,7 +2331,7 @@ $ curl \
       "attributes": {
         "name": "tag2",
         "created-at":  "2022-03-09T06:04:39.585Z",
-        "instance_count": 2
+        "instance-count": 2
       },
       "relationships": {
         "organization": {
