Add API documentation for configuration version download

--- a/content/cloud-docs/api-docs/changelog.mdx
+++ b/content/cloud-docs/api-docs/changelog.mdx
@@ -15,6 +15,9 @@ page_id: api-changelog
 
 Keep track of changes to the API for Terraform Cloud and Terraform Enterprise.
 
+### 2022-XX-XX
+* Added the [Download Configuration Files](/cloud-docs/api-docs/configuration-versions#download-configuration-files) endpoints
+
 ### 2021-12-09
 
 * Added `variables` field for POST /runs and the run resource, enabling run-specific variable values.
